# Shadey

./: .gitignore  .gitmodules  CMakeLists.txt
src/client/: client.cpp  client.h  command_helpers.cpp  command_helpers.h  hooks.cpp  hooks.h  main.cpp  non_copyable.h  renderer.cpp  renderer.h  shader_helpers.cpp  shader_helpers.h  string_helpers.h
src/client/commands/: ping.cpp  shader.cpp  vulkan_types.cpp
